# player

./: .gitignore  .gitlab-ci.yml  .travis.yml  Makefile  audio.Dockerfile  sdl-gpu.Dockerfile  sdl.Dockerfile  sensors.Dockerfile  start_audio  start_sdl  start_sdl-gpu  start_sensors  wrap.Dockerfile
sdl/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  README.md  README_messages.md  deploy_key.enc
sdl/cmake/: CacheCheck.cmake  CallCheck.cmake  MemoryCheck.cmake  ThreadsCheck.cmake  cppcheck.cmake
sdl/include/: amqp_listen.h  amqp_send.h  buffer_sizes.h  config_env.h  dump_trace.h  grabber.h  host_gl.h  logger.h  player_nfc.h  protobuf_framing.h  render_api.h  sdl_events.h  sdl_translate.h  sensors.h  socket.h
sdl/proto/: nfc.proto  recording.proto  sensors_packet.proto
sdl/src/: amqp_listen.c  config_env.c  dump_trace.c  grabber.c  host_gl.c  logger.c  main.c  player_audio.c  player_nfc.c  protobuf_framing.c  sdl_events.c  sdl_translate.c  sensors.c  socket.c
sdl/testNFC/: CMakeLists.txt  testValidateNFC.c  testValidateNFC_README.md
sdl/testPlayer/: amqp_send.c  mockVMLibNci.c  mockVMLibNci.h  mockVMNfcd.c  mockVMNfcd.h  mockVMSensors.c  mockVMSensors.h  testSensors.c
